# ParralelProgrammingC

./: CMakeLists.txt  README.md  benchmark.sh  benchmark_windows.bat  chat.txt  results.csv  results_linux.csv  results_windows.csv  run_wsl_benchmarks.bat
src/: mpi.c  omp.c  pthread.c  seq.c  sort.c  sort.h  utils.c  utils.h
